--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,6 +1,6 @@
 <div class="row">
 
-  <div class="col-md-12">
+  <div class="col-md-12 alert alert-info">
 
     Hello there, <span id="user"><%= @conn.params["user"] %> </span>
 
@@ -9,7 +9,7 @@
   <div class="col-md-8">
     <h3>Messages:</h3>
 
-    <ul id="messageList" class="list-unstyled">
+    <ul id="messageList" class="list-unstyled" style="height: 400px; border: 1px solid black; overflow-y: auto; padding: 10px">
 
     </ul>
 
